--- a/style.css
+++ b/style.css
@@ -1,10 +1,11 @@
 body {
   background-color: #f3f3ec;
 }
-h3 {
+.container {
   display: flex;
+  flex-direction: column;
   align-items: center;
-  justify-content: center;
+  text-align: center;
   margin-top: 10em;
 }
 .grid {
